# xfce4-winbootbutton-plugin

./: .gitignore  ChangeLog  Makefile  Makefile.am  configure  configure.ac  libtool  readme.md  winbootbutton.c  winbootbutton.desktop
icons/: Makefile.am  icon.sketch
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
src/: Makefile.am  _dialogs.xml  _dialogs.xml~  _gresources.c  _gresources.xml  winbootbutton.c  winbootbutton.desktop  winbootbutton.h  winreboot.c  winreboot.h
